organização de pasta

--- a/tca.html
+++ b/tca.html
@@ -15,7 +15,7 @@
             <article>
                 <h1>Violência e Preconceitos nas Escolas: Panorama e Soluções</h1>
                 <p>Esta apresentação visa explorar a problemática da violência e dos preconceitos no ambiente escolar brasileiro, analisando suas diversas manifestações e impactos. Além disso, busca apresentar soluções colaborativas e políticas públicas eficazes para promover um ambiente de respeito, inclusão e paz nas escolas. Acreditamos que, através do diálogo e da ação conjunta, é possível construir um futuro educacional mais justo e igualitário para todos os estudantes.</p>
-                <img src="imagem-tam200.png" alt="imagem">
+                <img src="imagem/imagem-tam200.png" alt="imagem">
             </article>
             <article>
                 <h1>O que são Violência e Preconceito Escolar?</h1>
