--- a/tca.html
+++ b/tca.html
@@ -126,7 +126,7 @@
         </section>
     </main>
     <footer>
-        <p>desenvolvido por: Lucas </p>
+        <p>desenvolvido por: Lucas G.</p>
     </footer>
 </body>
 </html>
